<resources>
    <string name="app_name">Studi Kasus   :</string>
    <string name="name">Nama          :</string>
    <string name="bornplace">Tempat Lahir  :</string>
    <string name="born">Tanggal Lahir :</string>
    <string name="place">Alamat        :</string>
    <string name="number">No.Handphone  :</string>
    <string name="hobby">Hobby         :</string>
    <string name="wish">Keinginan     :</string>
    <string name="print">Cetak</string>
    <string name="result">FORM DATA DIRI: </string>
</resources>